@@ -1,6 +1,10 @@
 2015-11-09  Nathan Sidwell  <nathan@codesourcery.com>
 
-	* testsuite/libgomp.oacc-c-c++-common/firstprivate-1.c: New.
+	* testsuite/libgomp.oacc-c-c++-common/firstprivate-1.c: Remove
+	inadvertent commit.
+
+2015-11-09  Nathan Sidwell  <nathan@codesourcery.com>
+
 	* testsuite/libgomp.oacc-c-c++-common/routine-g-1.c: New.
 	* testsuite/libgomp.oacc-c-c++-common/routine-gwv-1.c: New.
 	* testsuite/libgomp.oacc-c-c++-common/routine-v-1.c: New.
